top banner or main header section done

--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Poppins&family=Roboto&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- Top Banner Section Or Main Header Section Start From Here -->
+    <section class="top-banner">
+        <h1>Let's Help Those Who Are <br> More In Need</h1>
+        <p>Recently Bangladeh Eastern Site That Means Almost All Divison <br> Of Slyhet Badly Affected By Natural
+            Disaster
+            Flood.</p>
+        <a class="link-button top-banner-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DONATE
+            NOW</a>
+    </section>
+    <!-- Top Banner Section Or Main Header Section End Here -->
 </body>
 
 </html>
