Again Modified Top Banner Section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
 <body>
     <!-- Top Banner Section Or Main Header Section Start From Here -->
     <section class="top-banner">
-        <h1>Let's Help Those Who Are <br> More In Need</h1>
-        <p>Recently Bangladeh Eastern Site That Means Almost All Divison <br> Of Slyhet Badly Affected By Natural
-            Disaster
-            Flood.</p>
-        <a class="link-button top-banner-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DONATE
-            NOW</a>
+        <div class="text-area">
+            <h1>Let's Help Those Who Are More In Need</h1>
+            <p>Recently Bangladeh Eastern Site That Means Almost All Divison Of Slyhet Badly Affected By Natural
+                Disaster
+                Flood.</p>
+            <a class="link-button top-banner-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DONATE
+                NOW</a>
+        </div>
     </section>
     <!-- Top Banner Section Or Main Header Section End Here -->
+    <!-- Donate Today Section Start From Here -->
+    <section>
+        <h1>Donate Today</h1>
+        <p>For The Badly Flood Affected Area Of Slyhet <br>
+            Please Donate As Much As You Can. </p>
+    </section>
+    <!-- Donate Today Section End Here -->
 </body>
 
 </html>
