Donate Today Section Done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,30 @@
     </section>
     <!-- Top Banner Section Or Main Header Section End Here -->
     <!-- Donate Today Section Start From Here -->
-    <section>
+    <section class="donate-today">
         <h1>Donate Today</h1>
-        <p>For The Badly Flood Affected Area Of Slyhet <br>
-            Please Donate As Much As You Can. </p>
+        <p>For The Badly Flood Affected Area Of Slyhet Please Donate As Much As You Can. Your Help Probably Reduce Pain
+            Of The Badly Affected Area. </p>
+        <div class="donate-money">
+            <div class="money-card">
+                <h2>100Tk</h2>
+            </div>
+            <div class="money-card">
+                <h2>200Tk</h2>
+            </div>
+            <div class="money-card-unique">
+                <h2><span style="color: tomato;">500Tk</span></h2>
+            </div>
+            <div class="money-card">
+                <h2>1000Tk</h2>
+            </div>
+            <div class="money-card">
+                <h2>5000Tk</h2>
+            </div>
+        </div>
+        <input type="text" placeholder="Other Amount (Taka)">
+        <a class="link-button top-banner-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DONATE
+            NOW</a>
     </section>
     <!-- Donate Today Section End Here -->
 </body>
