Our Donate Plan Section Done

--- a/index.html
+++ b/index.html
@@ -49,11 +49,58 @@
                 <h2>5000Tk</h2>
             </div>
         </div>
-        <input type="text" placeholder="Other Amount (Taka)">
+        <input type="text" placeholder="Other Amount (Taka)"> <br>
         <a class="link-button top-banner-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DONATE
             NOW</a>
     </section>
     <!-- Donate Today Section End Here -->
+    <!-- Our Donation Plan Section Start From Here -->
+    <section class="Donation-plan">
+        <div class="donation-plan-text">
+            <h1>Our Donate Plan</h1>
+            <p>We Have 3 Types Of Donation Plan. You Can Try Any Of Among Them As Your Wealth Position. <br> We Thank
+                You
+                For
+                Choosing Our Donation Plan. </p>
+        </div>
+        <div class="plan-cards">
+            <div class="plan-card plan-card1-bg">
+                <div>
+                    <img src="./icons/food.png" alt="">
+                </div>
+                <div>
+                    <h3>Food for a family</h3>
+                    <p>you can donate one day meal for a family. Even You Can Donate two, Three Or More Days Meal as
+                        your
+                        wealth Position. We Really Appricate And Also Want to give thanks for your good Job. </p>
+                </div>
+            </div>
+            <div class="plan-card plan-card2-bg">
+                <div>
+                    <img src="./icons/shelter.png" alt="">
+                </div>
+                <div>
+                    <h3>Shelter for a family</h3>
+                    <p>you can donate shelter for a family for Some Days. Even You Can Donate two, Three Or More familys
+                        More Days Shelter as your wealth Position. We Really Appricate And Also Want to give thanks for
+                        your good Job. </p>
+                </div>
+            </div>
+            <div class="plan-card plan-card3-bg">
+                <div>
+                    <img src="./icons/Frame-1.png" alt="">
+                </div>
+                <div>
+                    <h3>Education for a child</h3>
+                    <p>you can donate Education Equipement For One family for One Month. Even You Can Donate two, Three
+                        Or More Family's Education Equipment for more Days as
+                        your
+                        wealth Position. We Really Appricate And Also Want to give thanks for your good Job. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Our Donation Plan Section End Here -->
 </body>
 
 </html>
