Our Gallery Section Done

--- a/index.html
+++ b/index.html
@@ -101,6 +101,53 @@
         </div>
     </section>
     <!-- Our Donation Plan Section End Here -->
+    <!-- Our Gallery Section Start From Here -->
+    <section class="our-gallery">
+        <h1>Our Gallery</h1>
+        <div class="gallery-images">
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation0.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation1.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation8.jpg" alt="">
+            </div>
+            <div class=" gallery-image">
+                <img class="gallery-image2" src="./images/donation11.jpg" alt="">
+            </div>
+        </div>
+        <div class="gallery-images">
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation12.png" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation13.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation14.webp" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation2.jpg" alt="">
+            </div>
+        </div>
+        <div class="gallery-images">
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation3.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation4.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation5.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img class="gallery-image2" src="./images/donation6.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Our Gallery Section End Here -->
 </body>
 
 </html>
