get my update section Done

--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
         </div>
     </section>
     <!-- Our Gallery Section End Here -->
+    <!-- Get My Update Section Start From Here -->
+    <section class="get-my-update">
+        <h1>Get My Updates</h1>
+        <p>You Can get my update through Typing Your email Here. Please Write Your Email To Get More Information Of My
+            Service. Thanks </p>
+        <div class="contact-email">
+            <input type="text" placeholder="Email">
+            <a class="link-button top-banner-button" target="_blank"
+                href="https://github.com/hafizurrahmanrazib">Subscribe</a>
+        </div>
+    </section>
+    <!-- Get My Update Section End Here -->
 </body>
 
 </html>
