Successfully Done Get My Update And Footer Done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2>200Tk</h2>
             </div>
             <div class="money-card-unique">
-                <h2><span style="color: tomato;">500Tk</span></h2>
+                <h2><span style="color: #FF5959;">500Tk</span></h2>
             </div>
             <div class="money-card">
                 <h2>1000Tk</h2>
@@ -161,5 +161,11 @@
     </section>
     <!-- Get My Update Section End Here -->
 </body>
+<!-- Footer Section Start From Here -->
+<footer>
+    <h1>Be Humble</h1>
+    <p>&copy; All Reserved Is This Website Hafizur Rahman Razib</p>
+</footer>
+<!-- Footer Section End Here -->
 
 </html>
